# groundlight_ros

./: .gitignore  Dockerfile  README.md  package.xml  requirements.txt  send_popup.py  setup.cfg  setup.py  simple_movement_via_publishing.py
gl_camera/: package.xml  setup.cfg  setup.py
gl_camera/config/: webcam.rviz
gl_camera/gl_camera/: camera_server.py  webcam.py
gl_framegrab/: package.xml  setup.cfg  setup.py
gl_framegrab/gl_framegrab/: framegrab.py
gl_image_query/: package.xml  setup.cfg  setup.py
gl_image_query/gl_image_query/: action_server.py  hello_world.py  image_query_action_client.py  image_query_action_server.py  image_query_server.py  image_query_visualizer.py  pose_publisher.py  rviz_markers.py  sample_groundlight_client.py  webcam_example.py
gl_image_query/launch/: groundlight.launch.py  hello_world.launch.py
gl_interfaces/: CMakeLists.txt  package.xml
gl_interfaces/action/: ImageQuery.action
gl_interfaces/msg/: ImageQueryData.msg  ImageQueryFeedback.msg  ImageQueryParams.msg  ImageQueryResponse.msg  ImageQueryResult.msg
gl_markers/: package.xml  setup.cfg  setup.py
gl_markers/gl_markers/: markers.py
groundlight/: image_query_handler.py  package.xml  setup.cfg  setup.py
groundlight_interfaces/: CMakeLists.txt  package.xml
groundlight_interfaces/srv/: ImageQuery.srv
groundlight_ros/: add_two_ints_server.py  camera.py
image_query_handler/: package.xml  setup.cfg  setup.py
image_query_handler/image_query_handler/: client_member_function.py  image_query_server.py  moveit_tutorial.py  sample_groundlight_client.py
msg/: ImageQuery.msg
sample_applications/gl_kinova/: Dockerfile  docker-compose.yaml  package.xml  setup.cfg  setup.py
sample_applications/gl_kinova/gl_kinova/: kinova_demo.py
sample_applications/gl_kinova/launch/: demo.launch.py
sample_applications/gl_turtlebot/: Dockerfile  docker-compose.yaml  package.xml  setup.cfg  setup.py
sample_applications/gl_turtlebot/config/: demo.rviz
sample_applications/gl_turtlebot/gl_turtlebot/: demo.py  interactive_marker.py
sample_applications/gl_turtlebot/launch/: demo.launch.py
sample_applications/gl_turtlebot/rviz/: demo.rviz
sample_applications/gl_ur/: package.xml  setup.cfg  setup.py  simple_inspection.py
sample_applications/gl_ur/gl_ur/: ur_demo.py
sample_applications/gl_webcam/: README.md  package.xml  setup.cfg  setup.py
sample_applications/gl_webcam/config/: demo.rviz
sample_applications/gl_webcam/gl_webcam/: demo.py  frustum_publisher.py  image_drawer.py  joint_publisher.py
sample_applications/gl_webcam/launch/: bringup.launch.py  demo.launch.py
sample_applications/gl_webcam/urdf/: laptop.urdf
sample_applications/ur/: README.md  get_pose.py  moveit_test.py
sample_camera/: package.xml  setup.cfg  setup.py
sample_camera/sample_camera/: camera_node.py
