<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>groundlight</name>
  <version>0.1.0</version>
  <description>Build computer vision systems from natural language with Groundlight</description>
  <maintainer email="tim@groundlight.ai">Tim Huff</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv4</depend>
  <depend>cv_bridge</depend>

</package>
