<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gl_ur</name>
  <version>0.0.1</version>
  <description>Sample application using Groundlight with a Universal Robots arm</description>
  <maintainer email="tim@groundlight.ai">Tim Huff</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv4</depend>
  <depend>cv_bridge</depend>
  
</package>
